Fix overflow of create-task modal windows on small devices

--- a/app/src/component/style/Modal.scss
+++ b/app/src/component/style/Modal.scss
@@ -46,6 +46,7 @@
 	@include paper-border;
 
 	background: white;
+	display: flex;
 	max-width: 100%;
 	margin: auto;
 }
